dnl Process this file with autoconf to produce a configure script.
dnl Better yet, do autoheader; autoconf; ./configure

AC_INIT(../computer.c)
AC_PREFIX_DEFAULT(/usr/games)

AC_CONFIG_HEADER(config.h)

dnl Must use builtin() as it is overridden by some AC_ macros
builtin(include,./curses.m4)

dnl Swiped ncurses detection from old gnu mouseless commander
search_scoredir=true
install_setgid=0755
AC_SUBST(install_setgid)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(RM, rm, rm)
AC_PATH_PROG(LN, ln, ln)

dnl ------------------------------------------------------------------
dnl  Should we install binary setgid?
dnl ------------------------------------------------------------------
AC_ARG_ENABLE(setgid,
        [  --enable-setgid         Install binary with setuid flag set],
        if test x$enableval = xyes
        then
                install_setgid=02755
        fi
)


dnl ------------------------------------------------------------------
dnl  Search for some version of curses
dnl ------------------------------------------------------------------
AC_CHECK_CURSES


dnl ------------------------------------------------------------------
dnl  Where should we keep the highscores
dnl ------------------------------------------------------------------
AC_ARG_WITH(scoredir,
        [  --with-scoredir=score-dir
                          Specify directory for scorefiles],
        if test x$withval = xyes
        then
                search_scoredir=true
        else
                search_scoredir=false
        fi
)

dnl ------------------------------------------------------------------
dnl  Search for appropriate high score directory
dnl ------------------------------------------------------------------
AC_DEFUN(AC_SCOREDIR, [
    if $search_scoredir
    then
        if test -d $1
        then
            AC_DEFINE(SCOREDIR, "$1")
            search_scoredir=false
            AC_MSG_RESULT(Found $1)
        fi
    fi
])
if $search_scoredir
then
    AC_CHECKING(Checking for appropriate scoredir)
    AC_SCOREDIR(/var/lib/games)
    AC_SCOREDIR(/usr/games/lib)
    AC_SCOREDIR(/usr/lib/games)
    AC_SCOREDIR(/usr/local/games/lib)
fi

dnl Checks for header files.
dnl AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
dnl AC_TYPE_SIGNAL
dnl AC_FUNC_VPRINTF
AC_CHECK_FUNCS(rename)

dnl Haven't figured out how to do libintl without gnome
AC_DEFINE(DONT_USE_LIBINTL)

AC_OUTPUT(Makefile)


