@YELP_HELP_RULES@
HELP_ID = tali

HELP_MEDIA = \
	figures/logo32.png \
	figures/logo.png

HELP_FILES = \
	index.page \
	start-game.page \
	play-game.page \
	score-slot.page \
	players-setting.page \
	game-settings.page \
	scores.page \
	keyboard-shortcuts.page \

HELP_FILES = \
	index.page \
	start-game.page \
	play-game.page \
	score-slot.page \
	players-setting.page \
	game-settings.page \
	scores.page \
	keyboard-shortcuts.page \
	legal.xml

HELP_LINGUAS =

-include $(top_srcdir)/git.mk
