@YELP_HELP_RULES@
HELP_ID = tali

HELP_MEDIA = \
	figures/logo32.png \
	figures/logo.png

HELP_FILES = \
	game-settings.page \
	index.page \
	keyboard-shortcuts.page \
	play-game.page \
	scores.page \
	settings.page
	start-game.page
	score-slot.page \
	players-setting.page \
	game-settings.page \
	scores.page \
	keyboard-shortcuts.page \
	legal.xml

HELP_LINGUAS =

-include $(top_srcdir)/git.mk
