@YELP_HELP_RULES@
HELP_ID = tali

HELP_FILES = \
	game-settings.page \
	index.page \
	keyboard-shortcuts.page \
	legal.xml \
	scores.page \
	settings.page \
	start-game.page

HELP_MEDIA = \
	media/logo32.png \
	media/logo.png

HELP_LINGUAS = \
	cs \
	de \
	el \
	es \
	fr \
	hu \
	ru \
	sv

-include $(top_srcdir)/git.mk
