EXTRA_DIST = gnome-dice-1.xpm \
	gnome-dice-2.xpm \
	gnome-dice-3.xpm \
	gnome-dice-4.xpm \
	gnome-dice-5.xpm \
	gnome-dice-6.xpm \
	gnome-dice-none.xpm \
	gnome-die1.png \
	gnome-die2.png \
	gnome-die3.png \
	gnome-die4.png \
	gnome-die5.png \
	gnome-die6.png \
	gnome-gtali.png

Pixmapdir = $(datadir)/pixmaps
Pixmap_DATA = gnome-gtali.png \
	gnome-die1.png \
	gnome-die2.png \
	gnome-die3.png \
	gnome-die4.png \
	gnome-die5.png \
	gnome-die6.png
