icondir = $(datadir)/icons/hicolor/48x48/apps/
icon_DATA = gnome-tali.png

Pixmapdir = $(datadir)/pixmaps/gtali
Pixmap_DATA = \
	gnome-dice-1.svg \
	gnome-dice-2.svg \
	gnome-dice-3.svg \
	gnome-dice-4.svg \
	gnome-dice-5.svg \
	gnome-dice-6.svg \
	gnome-dice-none.svg

EXTRA_DIST = $(Pixmap_DATA) $(icon_DATA)

