icon16dir = $(datadir)/icons/hicolor/16x16/apps/
icon16_DATA = 16x16/gnome-tali.png
icon22dir = $(datadir)/icons/hicolor/22x22/apps/
icon22_DATA = 22x22/gnome-tali.png
icon32dir = $(datadir)/icons/hicolor/32x32/apps/
icon32_DATA = 32x32/gnome-tali.png
icon48dir = $(datadir)/icons/hicolor/48x48/apps/
icon48_DATA = 48x48/gnome-tali.png
svgicondir = $(datadir)/icons/hicolor/scalable/apps/
svgicon_DATA = scalable/gnome-tali.svg

Pixmapdir = $(datadir)/pixmaps/gtali
Pixmap_DATA = \
	gnome-dice-1.svg \
	gnome-dice-2.svg \
	gnome-dice-3.svg \
	gnome-dice-4.svg \
	gnome-dice-5.svg \
	gnome-dice-6.svg \
	gnome-dice-none.svg

EXTRA_DIST = $(Pixmap_DATA) $(icon_DATA) $(svgicon_DATA)
